# mcmc-date

./: .gitignore  .rsync-project  README.md  README.org  cabal.project  cabal.project.freeze  flake.nix  hie.yaml  hie.yaml.bak  mcmc-date.cabal  mcmc-dating.cabal  stack.yaml
app/: Definitions.hs  Hamiltonian.hs  Main.hs  Monitor.hs  Options.hs  Probability.hs  State.hs  Tools.hs
bench/: Bench.hs
bench/comparison_with_mcmctree/: README.md
bench/comparison_with_mcmctree/00_inp_data/: mtCDNApri.phy  ur_mtCDNApri.trees
bench/comparison_with_mcmctree/00_inp_data/calibs/raw_calibs/: calibrations.txt
bench/comparison_with_mcmctree/01_PAML/: mcmctree_orig.ctl
bench/comparison_with_mcmctree/01_PAML/00_CODEML/: in.BV  mcmctree_codeml.ctl
bench/comparison_with_mcmctree/01_PAML/00_CODEML/codeml/: lnf  rst  rst1  tmp0001.out  tmp0001.trees  tmp0001.txt
bench/comparison_with_mcmctree/01_PAML/01_MCMCtree/00_prior/: node_tree.tree
bench/comparison_with_mcmctree/01_PAML/dummy_ctl_files/: mcmctree_dummy.ctl
bench/comparison_with_mcmctree/01_PAML/scripts/: Check_priors_margVScalib.R  Generate_dummy_aln.R  MCMC_diagnostics_posterior.R  MCMC_diagnostics_prior.R  Merge_node_labels.R
bench/comparison_with_mcmctree/01_PAML/sum_files_prior/: FigTree_mtcdnapri_CLK_95HPD.tree
bench/comparison_with_mcmctree/02_McmcDate/00_phylobayes/: unr_lg_g5_ncat1.currenttree  unr_lg_g5_ncat1.monitor  unr_lg_g5_ncat1.trace
bench/comparison_with_mcmctree/02_McmcDate/01_McmcDate/: analysis.conf
bench/comparison_with_mcmctree/02_McmcDate/01_McmcDate/data/: mtCDNApri_MD.trees  pb_rooted_mitCDNApri.tree  unr_lg_g5_ncat1.treelist
bench/comparison_with_mcmctree/03_compare_estimates/: post_allsamples.tsv  post_samples_run4.tsv  post_samples_run6.tsv  prior_allsamples.tsv  prior_samples_run1.tsv  prior_samples_run2.tsv  prior_samples_run4.tsv  prior_samples_run5.tsv  prior_samples_run6.tsv
bench/comparison_with_mcmctree/03_compare_estimates/scripts/: Benchmarking_comptime.R  Compare_McmcDate_MCMCtree.R  Functions.R
bench/comparison_with_mcmctree/src/: Functions.R
benchmark/: .gitignore
benchmark/01_PAML/00_CODEML/codeml/: log.txt  rub  tmp0001.ctl
benchmark/01_PAML/01_MCMCtree/00_prior/mcmc_files_mtcdnapri_CLK/: mcmctree_dummy.ctl
benchmark/02_McmcDate/00_phylobayes/: unr_lg_g5_ncat1.chain  unr_lg_g5_ncat1.param
benchmark/03_compare_estimates/: post_samples_run1.tsv  post_samples_run2.tsv  post_samples_run3.tsv  post_samples_run5.tsv  prior_samples_run3.tsv
lib/Mcmc/: Tree.hs
lib/Mcmc/Internal/: Dirichlet.hs
lib/Mcmc/Tree/: Import.hs  Lens.hs  Monitor.hs  Mrca.hs  Types.hs
lib/Mcmc/Tree/Prior/: BirthDeath.hs  Branch.hs
lib/Mcmc/Tree/Prior/Branch/: Internal.hs  RelaxedClock.hs
lib/Mcmc/Tree/Proposal/: Brace.hs  Common.hs  Contrary.hs  Internal.hs  RateClass.hs  Ultrametric.hs  Unconstrained.hs
lib/Statistics/Distribution/: TruncatedNormal.hs
report/: Readme.org
scripts/: analysis.conf  analyze  run  tree-identify  trees-midpoint-root  trees-monitor-summary  trees-monitor-summary-ultrametric  trees-monitor-to-nexus
scripts-analyze-stack/: analyze  trace-thin  tree-identify  trees-midpoint-root  trees-monitor-densitree  trees-monitor-summary  trees-monitor-summary-ultrametric  trees-monitor-to-nexus
src/: Definitions.hs  Main.hs  State.hs  Tools.hs
test/data/: alignment.fasta.trees  substitution.tree
tests/06-leaves/: run
tests/06-leaves-constant-rate/: analysis.conf  run
tests/06-leaves-constant-rate/data/: 2-infer  calibrations.csv  calibrations.tree  test.param  test.treelist  time.tree
tests/06-leaves-pinned-node/data/: calibrations.csv  test.monitor
tests/06-leaves/data/: 1-simulate  data.elynx  data.fasta  data.phylip  flake.nix  test.currenttree  test.monitor  test.param  test.trace  test.treelist  time.tree
tests/10-leaves-autocorrelated-rate/: analysis.conf
tests/10-leaves-autocorrelated-rate/data/: calibrations.csv  data.elynx  data.fasta  data.phylip  rate.alpha.tree  substitution.alpha.tree  test.currenttree  test.monitor  test.param  test.trace  test.treelist  time.alpha.tree  time.elynx  time.tree
tests/12-leaves-2-rate-classes/: analysis.conf
tests/12-leaves-2-rate-classes/data/: 0-simulate-time-tree  1-create-substitution-tree  calibrations.csv  constraints.csv  data.elynx  data.fasta  data.phylip  rate.alpha.tree  substitution.alpha.tree  test.currenttree  test.monitor  test.param  test.trace  test.treelist  time.alpha.tree  time.elynx  time.tree
tests/12-leaves-variable-rate/: analysis.conf  run
tests/12-leaves-variable-rate/data/: 1-simulate  2-infer  calibrations.csv  constraints.csv  data.elynx  data.fasta  data.phylip  rate.alpha.tree  rate.tree  substitution.alpha.tree  substitution.tree  substitution.tree.orig  test.treelist  time.alpha.rotated.tree  time.alpha.tree  time.elynx  time.tree
tests/24-leaves-braces/: analysis.conf  analyze
tests/24-leaves-braces/data/: 1-simulate  2-infer  braces.json  calibrations.csv  constraints.csv  data.elynx  data.fasta  data.phylip  test.trace  test.treelist  time.elynx  time.relabelled.tree  time.tree  time.unrooted.tree
tests/25-leaves-bastien/: analysis.conf  profile  run
tests/25-leaves-bastien/data/: alignment.fasta  alignment.fasta.trees.only  calibrations.csv  constraints.csv  constraints.txt  time.tree  trees-extract
tutorial/: README.md  results.org  tutorial.org
tutorial/data/: 1-phylobayes.sh  README.md  README.org  readme.md  readme.org  step2-phylobayes  strassert.conf
tutorial/goe/: README.md  createpdf.sh  tutorial_goe.md
tutorial/goe/data/: 1007_mito_plastid.tree  1007_mito_plastid.tree.unrooted  Fossils.csv  XGBoost.csv  braces.json
tutorial/main/: tutorial.org
tutorial/main/data/: README.md  README.org  step1-strassert-136taxa.unrooted.tre  step3-strassert-136taxa-calibrations.rooted.tre  step3-strassert-136taxa-constraints-direct-stiller.csv  step3-strassert-136taxa.rooted.tre  step4-strassert.conf
tutorial/svg-inkscape/: transfers_svg-tex.pdf_tex
tutorial_bacterial_rooting_goe/: .gitattributes  createpdf.sh  tutorial.md
(+86 files in other folders)
