cabal-version:  2.4
name:           mcmc-dating
version:        0.1.0.0
synopsis:       Phylogenetic dating using Markov chain Monte Carlo algorithms
description:    Please see the README at <https://github.com/dschrempf/mcmc-dating#readme>
category:       Math, Statistics
homepage:       https://github.com/dschrempf/mcmc-dating#readme
bug-reports:    https://github.com/dschrempf/mcmc-dating/issues
author:         Dominik Schrempf
maintainer:     dominik.schrempf@gmail.com
copyright:      Dominik Schrempf (2021)
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple

extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc-dating

executable mcmc-date
  main-is: Main.hs
  other-modules:
      Definitions
      Options
      Tools
      Paths_mcmc_dating
  autogen-modules:
      Paths_mcmc_dating
  hs-source-dirs:  src
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , deepseq
    , elynx-tree
    , hmatrix
    , lens
    , log-domain
    , math-functions
    , mcmc
    , mcmc-tree
    , mwc-random
    , optparse-applicative
    , vector
  default-language: Haskell2010
